--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   font-size: 1.6rem;
   font-weight: 400;
+  /* border: 1px solid black; */
 }
 
 .input {
@@ -37,9 +38,11 @@
 }
 
 .submit {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  /* border: 1px solid black; */
 }
 
 .submitBtn {
