--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -5,7 +5,9 @@
   flex-direction: column;
   background-color: rgba(155, 124, 89, 0.24);
   padding: 20px;
-  color: #ffffff;
+  color: #000000;
+  font-weight: 600;
+  letter-spacing: 0.1rem;
 }
 
 .logo {
@@ -16,4 +18,10 @@
 
 .logo img {
   margin: 10px 10px;
+  border-radius: 10px;
+  background-color: #000000;
+}
+
+.logo img:hover {
+  transform: scale(1.2, 1.2);
 }
