--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -12,7 +12,7 @@
   border: none;
   background-color: rgba(202, 195, 195, 0.205);
   height: 3rem;
-  width: 40rem;
+  width: 100%;
   margin-bottom: 2rem;
   font-size: 1.2rem;
 }
