--- a/src/components/Cover/Cover.module.css
+++ b/src/components/Cover/Cover.module.css
@@ -1,20 +1,53 @@
 .container {
-  /* border: 1px solid black; */
-  /* background: linear-gradient(3deg, #fff, #000); */
+  display: flex;
+  justify-content: space-evenly;
+  padding: 5rem 2rem;
+  background: linear-gradient(to right, #fff, rgba(175, 145, 107, 0.5) 100%);
+}
+
+@media all and (max-width: 1020px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5rem 0;
+  }
+}
+
+.row {
+  max-width: 50%;
+  margin-top: 2.5rem;
+}
+
+.ul {
+  margin: 0 auto;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  z-index: 0;
 }
 
 .list {
+  outline: none;
   display: flex;
-  align-items: center;
   justify-content: center;
-  align-content: center;
-  padding: 1.5rem;
+}
+
+.title {
+  font-size: 2rem;
+  font-weight: 750;
+  max-width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  margin: 0 2rem;
 }
 
 .image {
-  max-width: 25rem;
-}
-
-.image:hover {
-  transform: scale(1.2, 1.2);
+  max-width: 30rem;
+  height: auto;
+  border-radius: 25px;
 }
