--- a/src/components/Location/Location.module.css
+++ b/src/components/Location/Location.module.css
@@ -1,13 +1,5 @@
 .location {
   min-width: 10rem;
-  background: linear-gradient(
-    to top,
-    #fff 0%,
-    #000 5%,
-    #000 95%,
-    rgba(255, 255, 255, 0.2) 100%
-  );
-  color: white;
 }
 
 .row {
@@ -16,44 +8,32 @@
 }
 
 .cont {
-  margin: 2rem 0;
-  padding: 5rem 3rem;
-  /* border-left: 1px solid #5c3d1b;
-  border-right: 1px solid #5c3d1b; */
+  margin: 1rem 0;
+  padding: 2rem 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .para {
-  /* border: 1px solid black; */
   text-align: center;
-  font-size: 1.8rem;
-  font-weight: 500;
+  font-size: 2rem;
+  font-weight: 600;
   padding: 0 4rem;
   line-height: 2.5rem;
-  letter-spacing: 0.2rem;
+  letter-spacing: 0.1rem;
 }
 
 strong {
   text-transform: uppercase;
 }
 
-/* @media all and (max-width: 1200px) {
-  .box {
-    width: 30rem;
-    height: 30rem;
-  }
-} */
-
-.cont {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .box {
-  max-width: 50rem;
-  max-height: 50rem;
-  border-radius: 50%;
+  max-width: 80%;
+  max-height: 40rem;
+  border-radius: 50px;
   overflow: hidden;
+  border: 0.3rem solid black;
 }
 
 .map {
@@ -61,22 +41,87 @@ strong {
   position: relative;
   right: 50rem;
   animation-name: location;
-  animation-duration: 8s;
+  animation-delay: 5s;
+  animation-duration: 5s;
   animation-fill-mode: forwards;
   animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
 }
 
 @keyframes location {
   0% {
     transform: scale3d(1, 1, 1);
     position: relative;
-    top: 0rem;
-    left: -50rem;
+    top: -10rem;
+    left: 0rem;
   }
   100% {
     transform: scale3d(5, 5, 5);
     position: relative;
-    top: -225rem;
-    left: 100rem;
+    top: -250rem;
+    left: 155rem;
+  }
+}
+
+@media all and (max-width: 1620px) {
+  .cont {
+    margin: 0;
+    padding: 1rem 0;
+  }
+  @keyframes location {
+    0% {
+      transform: scale3d(1, 1, 1);
+      position: relative;
+      top: 0rem;
+      left: -50rem;
+    }
+    100% {
+      transform: scale3d(5, 5, 5);
+      position: relative;
+      top: -250rem;
+      left: 135rem;
+    }
+  }
+}
+
+@media all and (max-width: 1320px) {
+  .cont {
+    margin: 0;
+    padding: 1rem 0;
+  }
+  @keyframes location {
+    0% {
+      transform: scale3d(1, 1, 1);
+      position: relative;
+      top: 0rem;
+      left: -50rem;
+    }
+    100% {
+      transform: scale3d(5, 5, 5);
+      position: relative;
+      top: -250rem;
+      left: 105rem;
+    }
+  }
+}
+
+@media all and (max-width: 1020px) {
+  .cont {
+    margin: 0;
+    padding: 1rem 0;
+  }
+  @keyframes location {
+    0% {
+      transform: scale3d(1, 1, 1);
+      position: relative;
+      top: 0rem;
+      left: -50rem;
+    }
+    100% {
+      transform: scale3d(5, 5, 5);
+      position: relative;
+      top: -250rem;
+      left: 70rem;
+    }
   }
 }
