--- a/src/components/Cover/Cover.module.css
+++ b/src/components/Cover/Cover.module.css
@@ -5,16 +5,6 @@
   background: linear-gradient(to right, #fff, rgba(175, 145, 107, 0.5) 100%);
 }
 
-@media all and (max-width: 1020px) {
-  .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 5rem 0;
-  }
-}
-
 .row {
   max-width: 50%;
   margin-top: 2.5rem;
@@ -37,7 +27,7 @@
 .title {
   font-size: 2rem;
   font-weight: 750;
-  max-width: 50%;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -47,7 +37,82 @@
 }
 
 .image {
-  max-width: 30rem;
+  width: 30rem;
   height: auto;
   border-radius: 25px;
+}
+
+@media all and (max-width: 1020px) {
+  .image {
+    width: 25rem;
+    height: auto;
+  }
+}
+
+@media all and (max-width: 860px) {
+  .image {
+    width: 20rem;
+    height: auto;
+  }
+  .title {
+    font-size: 1.8rem;
+    font-weight: 650;
+  }
+}
+
+@media all and (max-width: 720px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 0;
+  }
+  .title {
+    padding: 1rem 1.5rem;
+    font-size: 1.5rem;
+    font-weight: 650;
+  }
+  .image {
+    width: 18rem;
+    height: auto;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .title {
+    padding: 0.5rem 1.5rem;
+    font-size: 1.2rem;
+    font-weight: 650;
+  }
+  .image {
+    width: 15rem;
+    height: auto;
+  }
+}
+
+@media all and (max-width: 480px) {
+  .title {
+    padding: 0.5rem 1.5rem;
+    font-size: 1.2rem;
+    font-weight: 650;
+  }
+  .image {
+    width: 12rem;
+    height: auto;
+  }
+  .row {
+    margin-top: 1.8rem;
+  }
+}
+
+@media all and (max-width: 380px) {
+  .title {
+    padding: 0.2rem 1.5rem;
+    font-size: 1rem;
+    font-weight: 650;
+  }
+  .image {
+    width: 10rem;
+    height: auto;
+  }
 }
